[package]
name = "large"
version = "0.0.1"
edition = "2024"
default-run = "large"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.3"
base64 = "0.22.1"
bcs = "0.1.6"
bech32 = "0.11.0"
clap = { version = "4.5.37", features = ["derive"] }
csv = "1.3.1"
envy = "0.4.2"
futures = "0.3.31"
hex = "0.4.3"
inquire = "0.7.5"
primitive-types = "0.13.1"
rand = "0.9.1"
reqwest = "0.12.15"
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.8"
spinners = "4.1.1"
sui-crypto = { version = "0.0.4", features = ["ed25519"] }
sui-graphql-client = "0.0.4"
sui-sdk-types = { version = "0.0.4", features = ["serde"] }
sui-transaction-builder = "0.0.4"
tempfile = "3.19.1"
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
url = "2.5.4"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = "0.2.0"

[dev-dependencies]
proptest = "1.6.0"
